[metadata]
name = pybx
version = attr: pybx.__version__
author = Geevarghese George
author_email = thatgeeman@gmail.com
description = Package to generate anchor boxes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thatgeeman/pybx
project_urls =
    Bug Tracker = https://github.com/thatgeeman/pybx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.7

[options.packages.find]
where = src
